corregido los paths helpers
