# priv/static/swagger.json
@@ -897,31 +897,6 @@
       }
     },
     "/api/specialties/{id}": {
-      "delete": {
-        "description": "Remove a specialty from the system",
-        "operationId": "TurnosWeb.SpecialtyController.delete",
-        "parameters": [
-          {
-            "description": "The id of the specialty",
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "type": "integer"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No content"
-          },
-          "404": {
-            "description": "Not found"
-          }
-        },
-        "summary": "Delete a specialty",
-        "tags": [
-          "Specialty"
-        ]
-      },
       "get": {
         "description": "Retrieve a specialty",
         "operationId": "TurnosWeb.SpecialtyController.show",
